--- a/jogo-projeto/teste-obstacles/index.html
+++ b/jogo-projeto/teste-obstacles/index.html
@@ -27,6 +27,10 @@
         <p id="bluepos"></p>
         <p id="bluepos1"></p>
         <p id="debug1"></p>
+        <p id="debug2"></p>
+        <p id="debug3"></p>
+        <p id="debug4"></p>
+        <p id="debug5"></p>
     </div>
 </body>
 
