--- a/excel-to-json/index.html
+++ b/excel-to-json/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"
+     type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"
     ></script>
   </head>
   <body>
@@ -15,48 +14,14 @@
     <button type="button" id="uploadExcel">Convert</button>
     <pre id="jsonData"></pre>
     <div>
-      <button type="button" id="teste" onclick="teste()" >Convert</button>
+      <button type="button" id="teste" onclick="teste()" >Teste</button>
       <p id="jsonDatatest"></p>
     </div>
   </body>
-  <script>
-    var selectedFile;
-    var jsonObject;
-    document
-      .getElementById("fileUpload")
-      .addEventListener("change", function(event) {
-        selectedFile = event.target.files[0];
-      });
-    document
-      .getElementById("uploadExcel")
-      .addEventListener("click", function() {
-        if (selectedFile) {
-          console.log("hi");
-          var fileReader = new FileReader();
-          fileReader.onload = function(event) {
-            var data = event.target.result;
-
-            var workbook = XLSX.read(data, {
-              type: "binary"
-            });
-            workbook.SheetNames.forEach(sheet => {
-              let rowObject = XLSX.utils.sheet_to_row_object_array(
-                workbook.Sheets[sheet]
-              );
-              jsonObject = JSON.stringify(rowObject);
-              //document.getElementById("jsonData").innerHTML = jsonObject;
-              console.log(jsonObject);
-            });
-          };
-          fileReader.readAsBinaryString(selectedFile);
-        }
-      });
-  </script>
+  <script type="text/javascript" src="src/xlx2json.js" ></script>
   <script>
     function teste() {
       document.getElementById("jsonDatatest").innerHTML = jsonObject;
     }
-    
   </script>
-
 </html>
