--- a/excel-to-json/index.html
+++ b/excel-to-json/index.html
@@ -1,70 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
-  </head>
-  <body>
-    <input type="file" id="fileUpload" accept=".xls,.xlsx" /><br />
-    <button type="button" id="uploadExcel">Convert</button>
-    <pre id="jsonData"></pre>
-    <div>
-      <button type="button" id="teste" onclick="teste()" >Teste</button>
-      <p id="jsonDatatest"></p>
-    </div>
-    <canvas id="myChart" width="400" height="400"></canvas>
-  </body>
-  <script type="text/javascript" src="src/xlx2json.js" ></script>
-  <script>
-    function teste() {
-      document.getElementById("jsonDatatest").innerHTML = jsonObject;
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Document</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
+</head>
+
+<body>
+  <input type="file" id="fileUpload" accept=".xls,.xlsx" /><br />
+  <button type="button" id="uploadExcel">Convert</button>
+  <pre id="jsonData"></pre>
+  <div>
+    <button type="button" id="teste" onclick="teste()">Teste</button>
+    <p id="jsonDatatest"></p>
+  </div>
+  <canvas id="myChart" width="400" height="400"></canvas>
+</body>
+<script type="text/javascript" src="src/xlx2json.js"></script>
+<script>
+  function teste() {
+    //document.getElementById("jsonDatatest").innerHTML = jsonObject;
+    var questions = Object.keys(dataQuest[0]);// Array com todas as questões
+    var answers = new Array(80);
+    for (var i = 0; i < answers.length; i++) {
+      answers[i] = new Array(80);
     }
-  </script>
-  <script>
+    for (let i = 0; i < 66; i++) {
+      for (let j = 0; j < 71; j++) {
+        answers[j][i] = dataQuest[i][questions[j]];
+      }
+    }
+
+
+
+    //answers[j].push(dataQuest[i][questions[j]]);// 66,72
+    console.log(dataQuest[63][questions[71]]);
+    console.log(answers[1][1]);
+    //for (let i = 0; i < questions.length; i++){console.log(questions[i])};
+
     var ctx = document.getElementById('myChart');
     var myChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-            datasets: [{
-                label: '# of Votes',
-                data: [12, 19, 3, 5, 2, 3],
-                backgroundColor: [
-                    'rgba(255, 99, 132, 0.2)',
-                    'rgba(54, 162, 235, 0.2)',
-                    'rgba(255, 206, 86, 0.2)',
-                    'rgba(75, 192, 192, 0.2)',
-                    'rgba(153, 102, 255, 0.2)',
-                    'rgba(255, 159, 64, 0.2)'
-                ],
-                borderColor: [
-                    'rgba(255, 99, 132, 1)',
-                    'rgba(54, 162, 235, 1)',
-                    'rgba(255, 206, 86, 1)',
-                    'rgba(75, 192, 192, 1)',
-                    'rgba(153, 102, 255, 1)',
-                    'rgba(255, 159, 64, 1)'
-                ],
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                yAxes: [{
-                    ticks: {
-                        beginAtZero: true
-                    }
-                }]
+      type: 'bar',
+      data: {
+        labels: [12, 19, 3, 5, 2, 3], //[...new Set(answers[2])],
+        datasets: [{
+          label: questions[72],
+          data: [12, 19, 3, 5, 2, 3],
+          backgroundColor: [
+            'rgba(255, 99, 132, 0.2)',
+            'rgba(54, 162, 235, 0.2)',
+            'rgba(255, 206, 86, 0.2)',
+            'rgba(75, 192, 192, 0.2)',
+            'rgba(153, 102, 255, 0.2)',
+            'rgba(255, 159, 64, 0.2)'
+          ],
+          borderColor: [
+            'rgba(255, 99, 132, 1)',
+            'rgba(54, 162, 235, 1)',
+            'rgba(255, 206, 86, 1)',
+            'rgba(75, 192, 192, 1)',
+            'rgba(153, 102, 255, 1)',
+            'rgba(255, 159, 64, 1)'
+          ],
+          borderWidth: 1
+        }]
+      },
+      options: {
+        scales: {
+          yAxes: [{
+            ticks: {
+              beginAtZero: true
             }
+          }]
         }
+      }
     });
     myChart.canvas.parentNode.style.height = '400px';
     myChart.canvas.parentNode.style.width = '400px';
+  }
+</script>
 
-    //console.log(dataQuest["Email Address"][1])
-    </script>
 </html>
