--- a/excel-to-json/index.html
+++ b/excel-to-json/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,7 +14,7 @@
   <button type="button" id="uploadExcel">Convert</button>
   <pre id="jsonData"></pre>
   <div>
-    <button type="button" id="teste" onclick="teste()">Teste</button>
+    <button type="button" id="teste" onclick="teste()">Gerar gráfico</button>
     <p id="jsonDatatest"></p>
   </div>
   <canvas id="myChart" width="400" height="400"></canvas>
