--- a/ElaAdmin-master/index.html
+++ b/ElaAdmin-master/index.html
@@ -578,6 +578,13 @@
             console.log(nameGraph + "createQuestionGraph");
             var insertDiv = document.createElement('div');
             insertDiv.setAttribute('class', 'col-lg-12');
+
+            //Contas para gerar as barras ao lado do gráfico
+            //Achar o maior valor
+            for (let i = 0; i < answerCounter[q].length;i++) {
+                //teste
+            }
+
             insertDiv.innerHTML = `
                             <div class="card">
                             <div class="card-body">
@@ -797,6 +804,7 @@
                 createQuestionGraph(nameGraph + q2, q2, "bar");
                 createQuestionGraph(nameGraph + 64, 64, "bar");
                 createQuestionGraph(nameGraph + 1, 1, "pie");
+                createQuestionGraph(nameGraph + 18, 18, "bar");
             
             }(jQuery));
         }
