--- a/ElaAdmin-master/index.html
+++ b/ElaAdmin-master/index.html
@@ -611,7 +611,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div class="card-body">
+                                    <div id="${nameGraph}progress" class="card-body">
                                         <div class="progress-box progress-1">
                                             <h4 class="por-title">${setAnswer[q][gIndice]}</h4>
                                             <div class="por-txt">${answerCounter[q][gIndice]} Alunos (${porcentG.toFixed()}%)</div>
