--- a/ElaAdmin-master/index.html
+++ b/ElaAdmin-master/index.html
@@ -579,26 +579,6 @@
             var insertDiv = document.createElement('div');
             insertDiv.setAttribute('class', 'col-lg-12');
 
-            //Contas para gerar as barras ao lado do gráfico
-            //Achar o maior valor
-            var gValue = -1;
-            var mValue = 1000;
-            var gIndice = -1;
-            var mIndice = -1;
-            for (let i = 0; i < answerCounter[q].length; i++) {
-                if (answerCounter[q][i] > gValue) {
-                    gValue = answerCounter[q][i];
-                    gIndice = i;
-                }
-                if (answerCounter[q][i] < mValue) {
-                    mValue = answerCounter[q][i];
-                    mIndice = i;
-                }
-            }
-            console.log(`${gIndice} #### ${answerCounter[q]}`)
-            var porcentG = answerCounter[q][gIndice] / answer[q].length * 100;
-            var porcentM = answerCounter[q][mIndice] / answer[q].length * 100;
-
             insertDiv.innerHTML = `
                             <div class="card">
                             <div class="card-body">
@@ -612,27 +592,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div id="${nameGraph}progress" class="card-body">
-                                        <div class="progress-box progress-1">
-                                            <h4 class="por-title">${setAnswer[q][gIndice]}</h4>
-                                            <div class="por-txt">${answerCounter[q][gIndice]} Alunos (${porcentG.toFixed()}%)</div>
-                                            <div class="progress mb-2" style="height: 5px;">
-                                                <div class="progress-bar bg-flat-color-1" role="progressbar"
-                                                    style="width: ${porcentG.toFixed()}%;" aria-valuenow="25" aria-valuemin="0"
-                                                    aria-valuemax="100"></div>
-                                            </div>
-                                        </div>
-                                        <div class="progress-box progress-2">
-                                            <h4 class="por-title">${setAnswer[q][mIndice]}</h4>
-                                            <div class="por-txt">${answerCounter[q][mIndice]} Alunos (${porcentM.toFixed()}%)</div>
-                                            <div class="progress mb-2" style="height: 5px;">
-                                                <div class="progress-bar bg-flat-color-2" role="progressbar"
-                                                    style="width: 24%;" aria-valuenow="25" aria-valuemin="0"
-                                                    aria-valuemax="100">
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div id="divCanvasAux${nameGraph}"></div>    
+                                        <div id="divCanvasAux${nameGraph}"></div>
                                     </div> <!-- /.card-body -->
                                 </div>
                             </div> <!-- /.row -->
@@ -643,6 +603,13 @@
 
             if (setAnswer[q].length < dataQuest.length / 6) {
                 let chartDataset = createDataset(setAnswer[q], question[q], answerCounter[q]);
+                if (graphType.toLowerCase() === "auto") {
+                    if (setAnswer[q].length > 4) {
+                        graphType = "bar";
+                    } else{
+                        graphType = "pie";
+                    }
+                }
                 createChartjs(nameGraph, chartDataset, graphType);
             } else {
                 var answerList = new Array(answer[q].length);
@@ -666,7 +633,7 @@
                         }
                     }
                     let chartDataset = createDataset(answerSet, question[q], counter);
-                    createChartjs(nameGraph, chartDataset, graphType);
+                    createChartjs(nameGraph, chartDataset, "bar");
                 } else if (question[q].indexOf("RA") >= 0) {
                     //teste
                     answerList = answer[q];
@@ -677,6 +644,48 @@
                 }
 
             }
+            //Contas para gerar as barras ao lado do gráfico
+            //Achar o maior valor
+            var gValue = -1;
+            var mValue = 1000;
+            var gIndice = -1;
+            var mIndice = -1;
+            for (let i = 0; i < answerCounter[q].length; i++) {
+                if (answerCounter[q][i] > gValue) {
+                    gValue = answerCounter[q][i];
+                    gIndice = i;
+                }
+                if (answerCounter[q][i] < mValue) {
+                    mValue = answerCounter[q][i];
+                    mIndice = i;
+                }
+            }
+            console.log(`${gIndice} #### ${answerCounter[q]}`)
+            var porcentG = answerCounter[q][gIndice] / answer[q].length * 100;
+            var porcentM = answerCounter[q][mIndice] / answer[q].length * 100;
+
+            var insertDivP1 = document.createElement('div');
+            insertDivP1.setAttribute('class', 'progress-box progress-1');
+            insertDivP1.innerHTML = `   <h4 class="por-title">${setAnswer[q][gIndice]}</h4>
+                                            <div class="por-txt">${answerCounter[q][gIndice]} Alunos (${porcentG.toFixed()}%)</div>
+                                            <div class="progress mb-2" style="height: 5px;">
+                                                <div class="progress-bar bg-flat-color-1" role="progressbar"
+                                                    style="width: ${porcentG.toFixed()}%;" aria-valuenow="25" aria-valuemin="0"
+                                                    aria-valuemax="100"></div>
+                                            </div>`
+            var insertDivP2 = document.createElement('div');
+            insertDivP2.setAttribute('class', 'progress-box progress-2');
+            insertDivP2.innerHTML = `<h4 class="por-title">${setAnswer[q][mIndice]}</h4>
+                                            <div class="por-txt">${answerCounter[q][mIndice]} Alunos (${porcentM.toFixed()}%)</div>
+                                            <div class="progress mb-2" style="height: 5px;">
+                                                <div class="progress-bar bg-flat-color-2" role="progressbar"
+                                                    style="width: ${porcentM.toFixed()}%;" aria-valuenow="25" aria-valuemin="0"
+                                                    aria-valuemax="100">
+                                                </div>
+                                            </div>`;
+
+            document.getElementById(`${nameGraph}progress`).prepend(insertDivP2);
+            document.getElementById(`${nameGraph}progress`).prepend(insertDivP1);
         }
 
         function createTable(nameGraph, answersList) {
@@ -695,7 +704,6 @@
             dataTable = dataTable + "<tbody>";
 
             //var tableAllAnswerSet = new Array(1);
-            //Fazer Teste se a resposta envolve Data Time Format
             //console.log(answersList);
             var tableAllAnswer = [];
             for (let i = 0; i < answersList.length; i++) {
@@ -718,6 +726,8 @@
                     //console.log(charArray)       
                 }
             }
+            dataTable = dataTable + "</tbody></table>";
+            document.getElementById(`divCanvas${nameGraph}`).innerHTML = dataTable;
 
             var tableAllAnswerSet = [...new Set(tableAllAnswer)];
             var tableAllAnswerCounter = new Array(tableAllAnswerSet.length);
@@ -732,19 +742,18 @@
                 }
             }
 
-            //console.log(tableAllAnswerSet);
-            //console.log(tableAllAnswerCounter);
-
-            dataTable = dataTable + "</tbody></table>";
-            document.getElementById(`divCanvas${nameGraph}`).innerHTML = dataTable;
-
-            (function ($) {
-                $(`#${nameTable}`).DataTable();
-            }(jQuery));
+            var insertDivAux = document.createElement('div');
+            insertDivAux.pro
+            insertDivAux.innerHTML = `<div id="divCanvasAux${nameGraph}"></div>`;
+            insertDivAux.setAttribute('id', `divCanvasAux${nameGraph}`);
+            document.getElementById(`${nameGraph}progress`).append(insertDivAux);
 
             var pieChartDataset = createDataset(tableAllAnswerSet, "Blank", tableAllAnswerCounter);
             createChartjs(`Aux${nameGraph}`, pieChartDataset, "pie");
 
+            (function ($) {
+                $(`#${nameTable}`).DataTable();
+            }(jQuery));
         }
 
         function createDataset(setAns, quest, answerC) {
@@ -774,6 +783,8 @@
         function createChartjs(nameGraph, chartDataset, graphType) {
 
             console.log(`divCanvas${nameGraph}`);
+
+
 
             document.getElementById(`divCanvas${nameGraph}`).innerHTML = `<canvas id=${nameGraph}></canvas>`
             var ctx = document.getElementById(nameGraph);
@@ -855,20 +866,20 @@
                 });// Pie chart flotPie1  End
 
                 //chart chart-js
-                let nameGraph = "TrafficChartteste";
+                let nameGraph = "ChartTeste";
 
-                //for (let i = 1; i < 30; i++){
-                //if (i!=4){
-                //        createQuestionGraph(nameGraph + i, i, "pie");
-                //}
-                //}
-                createQuestionGraph(nameGraph + 3, 3, "pie");
-                createQuestionGraph(nameGraph + q1, q1, "pie");
-                createQuestionGraph(nameGraph + 64, 64, "bar");
-                createQuestionGraph(nameGraph + 1, 1, "pie");
-                createQuestionGraph(nameGraph + 18, 18, "bar");
-                createQuestionGraph(nameGraph + 8, 8, "bar");
-                createQuestionGraph(nameGraph + 5, 5, "pie");
+                for (let i = 30; i < 71; i++) {
+
+                    createQuestionGraph(nameGraph + i, i, "auto");
+
+                }
+                //createQuestionGraph(nameGraph + 3, 3, "pie");
+                //createQuestionGraph(nameGraph + q1, q1, "pie");
+                //createQuestionGraph(nameGraph + 64, 64, "bar");
+                //createQuestionGraph(nameGraph + 1, 1, "pie");
+                //createQuestionGraph(nameGraph + 18, 18, "bar");
+                //createQuestionGraph(nameGraph + 8, 8, "bar");
+                //createQuestionGraph(nameGraph + 5, 5, "pie");
                 //createQuestionGraph(nameGraph + 8, 8, "pie");
 
             }(jQuery));
